<resources>
    <string name="app_name">FinalHomework_Lienyu</string>
    <string name="home">首页</string>
    <string name="explore">智游</string>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="broadcast_list">
        <item>请扩散！5月1日青城山-都江堰景区线上门票已约满</item>
        <item>《五一嗨耍全攻略》来袭！一键get都江堰4大经典耍法，“特种...</item>
        <item>走，上山采茶！漫山花海、遍野茶香......成都出发1h，拥...</item>
    </string-array>
    <string-array name="broadcastDate_list">
        <item>2023-05-01</item>
        <item>2023-04-27</item>
        <item>2023-04-18</item>
    </string-array>
    <string name="jiuzhai_overall">\t\t\t都江堰是世界文化遗产（2000年被联合国教科文组织列入“世界文化遗产”名录）、世界自然遗产（四川大熊猫栖息地）、世界灌溉工程遗产、全国重点文物保护单位、国家级风景名胜区、国家AAAAA级旅游景区。\n
\t\t\t都江堰景区位于四川省成都市都江堰市城西，坐落在成都平原西部的岷江上，始建于秦昭王末年（约公元前256～前251），是蜀郡太守李冰父子在前人鳖灵开凿的基础上组织修建的大型水利工程，由分水鱼嘴、飞沙堰、宝瓶口等部分组成，两千多年来一直发挥着防洪灌溉的作用，使成都平原成为水旱从人、沃野千里的"天府之国"，至今灌区已达30余县市、面积近千万亩，是全世界迄今为止，年代最久、唯一留存、仍在一直使用、以无坝引水为特征的宏大水利工程，凝聚着中国古代劳动人民勤劳、勇敢、智慧的结晶。</string>

    <string-array name="know_jiu_zhai_itemlist">
        <item>地理</item>
        <item>河流</item>
        <item>历史</item>
        <item>文化</item>
        <item>民俗</item>
        <item>乡村</item>
    </string-array>

    <string name="geo_1">
        \t\t\t\t都江堰景区位于四川省成都市都江堰市(原灌县)城西，坐落在成都平原西部的岷江上距成都市区约50公里，距离青城山风景区20公里。\n
        \t\t\t\t都江堰水利工程充分利用当地西北高、东南低的地理条件，根据江河出山口处特殊的地形、水脉、水势，乘势利导，无坝引水，自流灌溉，使堤防、分水、泄洪、排沙、控流相互依存，共为体系，保证了防洪、灌溉、水运和社会用水综合效益的充分发挥。它最伟大之处是建堰2274多年来经久不衰，而且发挥着愈来愈大的效益。都江堰建成后，成都平原沃野千里，“水旱从人，不知饥馑，时无荒年，谓之天府”。\n
    </string>
    <string name="river_1">
        \t\t\t\t都江堰市属中亚热带季风湿润气候区，年均气温15.2℃，年均降水量近1200毫米，年均无霜期280天。这里四季分明，夏无酷暑，最热的7、8月份平均气温为24℃左右，平均最高气温仅28℃。冬无严寒，最冷的1月份平均气温为4.6℃，平均最低气温在1℃左右。\n
    </string>
    <string name="history_1">
        \t\t\t\t都江堰的创建，开创了中国古代水利史上的新纪元\n
        \t\t\t\t都江堰的创建，以不破坏自然资源，充分利用自然资源为人类服务为前提，变害为利，使人、地、水三者高度协合统一，是全世界迄今为止仅存的一项伟大的“生态工程”。开创了中国古代水利史上的新纪元，标志着中国水利史进入了一个新阶段，在世界水利史上写下了光辉的一章。都江堰水利工程，是中国古代人民智慧的结晶，是中华文化划时代的杰作，更是古代水利工程沿用至今，“古为今用”、硕果仅存的奇观。与之兴建时间大致相同的古埃及和古巴比仑的灌溉系统，以及中国陕西的郑国渠和广西的灵渠，都因沧海变迁和时间的推移，或湮没、或失效，唯有都江堰独树一帜，由兴建源远流长，至今还滋润着天府之国的万顷良田。\n
    </string>
    <string name="history_2">
        \t\t\t\t都江堰是一个科学、完整、极富发展潜力的庞大的水利工程体系\n
        \t\t\t\t李冰主持创建的都江堰，正确处理鱼嘴分水堤、飞沙堰泄洪道、宝瓶口引水口等主体工程的关系，使其相互依赖，功能互补，巧妙配合，浑然一体，形成布局合理的系统工程，联合发挥分流分沙、泄洪排沙、引水疏沙的重要作用，使其枯水不缺，洪水不淹。都江堰的三大部分，科学地解决了江水自动分流、自动排沙、控制进水流量等问题，消除了水患。
        \t\t\t\t李冰所创建的都江堰是一个科学、完整、极富发展潜力的庞大的水利工程体系，是巧夺天工、造福当代、惠泽未来的水利工程，是区域水利网络化的典范。后来的灵渠、它山堰、渔梁坝、戴村坝一批历史性工程，都有都江堰的印记。\n
        \t\t\t\t都江堰水利工程的科学奥妙之处，集中反映在以上三大工程组成了一个完整的大系统，形成无坝限量引水并且在岷江不同水量情况下的分洪除沙、引水灌溉的能力，使成都平原“水旱从人、不知饥馑”，适应了当时社会经济发展的需要。解放后，又增加了蓄水、暗渠供水功能，使都江堰工程的科技经济内涵得到了充分的拓展，适应了现代经济发展的需要。\n
        \t\t\t\t都江堰水利事业工程针对岷江与成都平原的悬江特点与矛盾，充分发挥水体自调、避高就下、弯道环流特性，“乘势利导、因时制宜”，正确处理悬江岷江与成都平原的矛盾，使其统一在一大工程体系中，变水害为水利。\n
        \t\t\t\t两千多年前，都江堰取得这样伟大的科学成就，世界绝无仅有，至今仍是世界水利工程的最佳作品。1872年，德国地理学家李希霍芬(Richthofen 1833-1905)称赞“都江堰灌溉方法之完善，世界各地无与伦比”。1986年，国际灌排委员会秘书长弗朗杰姆，国际河流泥沙学术会的各国专家参观都江堰后，对都江堰科学的灌溉和排沙功能给予高度评价。1999年3月，联合国人居中心官员参观都江堰后，建议都江堰水利工程参评2000年联合国"最佳水资源利用和处理奖"。\n</string>
    <string name="culture_1">
        \t\t\t\t水文化\n
        \t\t\t\t由都江堰而产生的具有强烈地域色彩的都江堰水文化包括水文学、水文物、水神学等，诸如“二王庙”、“伏龙观”、“观景台”等处的人文景观；改建鱼嘴挖掘出土的东汉李冰石像和“饮水思源”石刻；歌颂李冰父子降龙治水的民间传说和具有一定宗教神学色彩的祭祀活动；以及由此而产生的祭水、祭神、祭人的诗、词、书画的水文学等，形成独具特色的都江堰水文化。都江堰有块石碑，上面刻着“深淘滩，低作堰”字样。\n
    </string>
    <string name="culture_2">
        \t\t\t\t\n对修建者的纪念\n
        \t\t\t\t都江堰建于公元前256年，是战国时期秦国蜀郡太守李冰及其子二郎率众修建的一座大型水利工程，是全世界至今为止，年代最久、唯一留存、以无坝引水为特征的宏大水利工程。2200多年来，至今仍发挥巨大效益，李冰治水，功在当代，利在千秋，不愧为文明世界的伟大杰作，造福人民的伟大水利工程。成都平原能够如此富饶，被人们称为“天府”乐土，从根本上说，是李冰创建都江堰的结果。所以《史记》说：“都江堰建成，使成都平原‘水旱从人，不知饥馑，时无荒年，天下谓之“天府”也’”。\n

        \t\t\t\t\n治水哲学思想\n
        \t\t\t\t都江堰源远流长，惠泽后代，其奥秘除了巧夺天工的工程布局外，更主要的是遵循了“乘势利导、因时制宜”的治水指导思想、“岁必一修”的管理制度，“遇难弯截角、逢正抽心”的治河原则，以及“砌鱼嘴立湃缺，深淘滩、低作堰”的引水、防沙、泄洪之管理经验和治堰准则。\n
        \t\t\t\t都江堰工程在两千多年运行中，充分发挥了工程潜能，人们在长期实践中积累了独具特色宝贵的经验。其中文化内涵丰富，反映了治水先驱和广大劳动人民的智慧，都江堰水文化的形成和发展，充分反映了“实践是检验真理的唯一标准”的正确性和长期性。都江堰水文化的内涵，反映了在工程修建、维修、管理和发展的全过程，是人类社会发展的重要遗产之一。这也是联合国评定都江堰工程为世界重要文化遗产的重要原因。\n

        \t\t\t\t\n治水三字经\n
        \t\t\t\t人们在长期实践中创造了都江堰水文化，其内涵深刻，是都江堰工程长盛不衰的重要因素。“乘势利导、因时制宜”的原则，是治理都江堰工程的准则，人们称之为“八字格言”。都江堰的治水三字经，更是人们治理都江堰工程的经验总结和行为准则。“深淘滩，低作堰，六字旨，千秋鉴，挖河沙，堆堤岸，砌鱼嘴，安羊圈，立湃阙，凿漏罐，笼编密，石装健，分四六，平潦旱，水画符，铁椿见，岁勤修，预防患，遵旧制，勿擅变”。\n

        \t\t\t\t治水三字经是千余年来人们治理都江堰经验的概括，有着深刻的文化内涵，是治理都江堰的行为准则。曾经有人批评《治水三字经》中的“遵旧制、勿擅变”是保守思想的反映。实践证明《治水三字经》中的每一项措施，都是人们从长期实践中总结出来的，值得珍视和继承。所谓遵旧制、勿擅变者，就是在治理都江堰时要按客观规律办事，而《治水三字经》就是千百年来治理都江堰工程的经验总结。“勿擅变”不是不变，而是要遵循客观规律办事。实践证明《治水三字经》文化内涵，是人们长期实践的结果。随着人们继续实践，《治水三字经》的意义将与时俱进，长期指导着都江堰工程的保护与发展。\n

        \t\t\t\t都江堰工程按水势和地形特征，以杩槎截流导流、卵石护岸、竹笼盛石筑堤、卧铁展示淘滩标准，以及“遇弯截角，逢正抽心”和“深淘滩，低作堰”等遗迹构成一道道独特的风景线，工艺精湛，造型优美，功能显著，显示出都江堰水文化特征，具有深远的历史和现实意义。至于降伏孽龙的传说，望娘滩的故事，更是家喻户晓，文化内涵深刻，体现了人们对都江堰的爱护和依恋之情。宝瓶口的水尺和古水则，更显示出劳动人民的智慧，指导着灌区人民正确运用都江堰水资源，使灌区工农业生产能够乘势利导，驱利避害。中华人民共和国成立之初，政府每天在《川西日报》公布都江堰宝瓶口水位，让灌区人民及时掌握都江堰水情，安排生产和防洪抗旱等工作。宝瓶口水则，至今仍具有指导灌区工农业生产和生活用水的意义。李冰神像的出土，“卧铁”的发现，展示都江堰水文化，引起人们对建设都江堰先行者的缅怀和崇敬。\n
    </string>
    <string name="culture_3">
        \t\t\t\t\n都江堰放水节\n
        \t\t\t\t每年农历六月二十四日和六月二十六日为中心的庙会活动。李冰主持创建都江堰，使长期苦于水旱灾害的川西平原一下子成为富庶的、世人瞩目的“天府之国”，人民对他的感戴之情是没齿难忘的。两千多年来，李冰父子凿离堆，开堰建渠为天府之国带来的福泽一直为世人所崇敬、感激，二王庙从古至今不但香火鼎盛，而且在历史上一直既有官方主持的祭奠活动，也有老百姓的民间祭祀活动，官方的祭祀活动更为隆重。据史料记载，官方的祭祀活动正式颁定，是在宋开宝七年（929年），初定为每年祭祀一次，后改为每年春秋祭祀两次。早期的祭祀十分隆重，有十分隆重的血祭遗风。现代代之以“清明放水节”庆典活动，已成为都江堰特有的风俗。\n

        \t\t\t\t\n二王庙庙会\n
        \t\t\t\t时间：每年的农历6月24日-农历6月26日\n
        \t\t\t\t相传农历六月二十四是二郎神生日，两日后为李冰生日，正值鸟语花香之时，受到都江堰恩泽的人们纷纷走出家门，来到二王庙焚香祭祀，怀念都江堰的缔造人李冰父子，由道庙主持举行盛大的“川主清源妙道真君”祭典大会，摆设道场三天。今二王庙庙会，不仅增添了歌舞表演、川剧表演等内容，还有川剧变脸等绝活展示；每岁庙会，二王庙内烟霞蒸腾，万人朝拜，空前盛况，不减当年。\n
    </string>

    <string name="custom_1">
        \t\t\t\t都江堰建于公元前256年，是战国时期秦国蜀郡太守李冰及其子二郎率众修建的一座大型水利工程，是全世界至今为止，年代最久、唯一留存、以无坝引水为特征的宏大水利工程。2200多年来，至今仍发挥巨大效益，李冰治水，功在当代，利在千秋，不愧为文明世界的伟大杰作，造福人民的伟大水利工程。成都平原能够如此富饶，被人们称为“天府”乐土，从根本上说，是李冰创建都江堰的结果。所以《史记》说：“都江堰建成，使成都平原‘水旱从人，不知饥馑，时无荒年，天下谓之“天府”也’”。\n

        \t\t\t\t都江堰源远流长，惠泽后代，其奥秘除了巧夺天工的工程布局外，更主要的是遵循了“乘势利导、因时制宜”的治水指导思想、“岁必一修”的管理制度，“遇难弯截角、逢正抽心”的治河原则，以及“砌鱼嘴立湃缺，深淘滩、低作堰”的引水、防沙、泄洪之管理经验和治堰准则。\n

        \t\t\t\t都江堰工程在两千多年运行中，充分发挥了工程潜能，人们在长期实践中积累了独具特色宝贵的经验。其中文化内涵丰富，反映了治水先驱和广大劳动人民的智慧，都江堰水文化的形成和发展，充分反映了“实践是检验真理的唯一标准”的正确性和长期性。都江堰水文化的内涵，反映了在工程修建、维修、管理和发展的全过程，是人类社会发展的重要遗产之一。这也是联合国评定都江堰工程为世界重要文化遗产的重要原因。\n
    </string>
    <string name="custom_2">
        \t\t\t\t\n江堰放水节\n

        \t\t\t\t每年农历六月二十四日和六月二十六日为中心的庙会活动。李冰主持创建都江堰，使长期苦于水旱灾害的川西平原一下子成为富庶的、世人瞩目的“天府之国”，人民对他的感戴之情是没齿难忘的。两千多年来，李冰父子凿离堆，开堰建渠为天府之国带来的福泽一直为世人所崇敬、感激，二王庙从古至今不但香火鼎盛，而且在历史上一直既有官方主持的祭奠活动，也有老百姓的民间祭祀活动，官方的祭祀活动更为隆重。据史料记载，官方的祭祀活动正式颁定，是在宋开宝七年（929年），初定为每年祭祀一次，后改为每年春秋祭祀两次。早期的祭祀十分隆重，有十分隆重的血祭遗风。现代代之以“清明放水节”庆典活动，已成为都江堰特有的风俗。\n
    </string>
    <string name="custom_3">
        \t\t\t\t\n二王庙庙会\n

        \t\t\t\t时间：每年的农历6月24日-农历6月26日\n

        \t\t\t\t相传农历六月二十四是二郎神生日，两日后为李冰生日，正值鸟语花香之时，受到都江堰恩泽的人们纷纷走出家门，来到二王庙焚香祭祀，怀念都江堰的缔造人李冰父子，由道庙主持举行盛大的“川主清源妙道真君”祭典大会，摆设道场三天。今二王庙庙会，不仅增添了歌舞表演、川剧表演等内容，还有川剧变脸等绝活展示；每岁庙会，二王庙内烟霞蒸腾，万人朝拜，空前盛况，不减当年。\n
    </string>

    <string name="country_1">
        \t\t\t\t\n水利工程\n

        \t\t\t\t都江堰水利工程充分利用当地西北高、东南低的地理条件，根据江河出山口处特殊的地形、水脉、水势，乘势利导，无坝引水，自流灌溉，使堤防、分水、泄洪、排沙、控流相互依存，共为体系，保证了防洪、灌溉、水运和社会用水综合效益的充分发挥。它最伟大之处是建堰2250多年来经久不衰，而且发挥着愈来愈大的效益。都江堰建成后，成都平原沃野千里，“水旱从人，不知饥馑，时无荒年，谓之天府”。都江堰渠首枢纽主要由鱼嘴、飞沙堰、宝瓶口三大主体工程构成。三者有机配合，相互制约，协调运行，引水灌田，分洪减灾，具有“分四六，平潦旱”的功效。\n
    </string>
    <string name="country_2">
        \t\t\t\t\n岷江鱼嘴分水工程\n

        \t\t\t\t鱼嘴分水堤又称“鱼嘴”，是都江堰的分水工程，因其形如鱼嘴而得名，它昂头于岷江江心，包括百丈堤、杩槎、金刚堤等一整套相互配合的设施。其主要作用是把汹涌的岷江分成内外二江，西边叫外江，俗称“金马河”，是岷江正流，主要用于排洪；东边沿山脚的叫内江，是人工引水渠道，主要用于灌溉。\n

        \t\t\t\t在古代，鱼嘴是以竹笼装卵石垒砌。由于它建筑在岷江冲出山口呈弯道环流的江心，冬春季江水较枯，水流经鱼嘴上面的弯道绕行，主流直冲内江，内江进水量约6成，外江进水量约4成；夏秋季水位升高，水势不再受弯道制约，主流直冲外江，内、外江江水的比例自动颠倒：内江进水量约4成，外江进水量约6成。这就利用地形，完美地解决了内江灌区冬春季枯水期农田用水以及人民生活用水的需要和夏秋季洪水期的防涝问题。\n
    </string>
    <string name="country_3">
        \t\t\t\t\n飞沙堰溢洪排沙工程\n
        \t\t\t\t飞沙堰溢洪道又称“泄洪道”，具有泻洪、排沙和调节水量的显著功能，故又叫它“飞沙堰”。 飞沙堰是都江堰三大件之一，看上去十分平凡，其实它的功用非常之大，可以说是确保成都平原不受水灾的关键要害。飞沙堰的作用主要是当内江的水量超过宝瓶口流量上限时，多余的水便从飞沙堰自行溢出；如遇特大洪水的非常情况，它还会自行溃堤，让大量江水回归岷江正流。飞沙堰的另一作用是“飞沙”，岷江从万山丛中急驰而来，挟着大量泥沙、石块，如果让它们顺内江而下，就会淤塞宝瓶口和灌区。 古时飞沙堰，是用竹笼卵石堆砌的临时工程；如今已改用混凝土浇铸，以保一劳永逸的功效。\n
    </string>
    <string name="country_4">
        \t\t\t\t\n宝瓶口引水工程\n
        \t\t\t\t宝瓶口起"节制闸"作用，能自动控制内江进水量，是湔山(今名灌口山、玉垒山)伸向岷江的长脊上凿开的一个口子，它是人工凿成控制内江进水的咽喉，因它形似瓶口而功能奇特，故名宝瓶口。留在宝瓶口右边的山丘，因与其山体相离，故名离堆。离堆在开凿宝瓶口以前，是湔山虎头岩的一部分。由于宝瓶口自然景观瑰丽，有“离堆锁峡”之称，属历史上著名的“灌阳十景”之一。\n
    </string>
    <string name="country_5">
        \t\t\t\t\n二王庙\n
        \t\t\t\t二王庙位于岷江右岸的山坡上，前临都江堰，原为纪念蜀王的望帝祠，齐建武（公元494～498年）时改祀李冰父子，更名为“崇德祠”。宋代（公元960～1279年）以后，李冰父子相继被皇帝敕封为王，故而后人称之为“二王庙”。庙内主殿分别供奉有李冰父子的塑像，并珍藏有治水名言、诗人碑刻等。建筑群分布在都江堰渠首东岸，规模宏大，布局严谨，地极清幽。是庙宇和园林相结合的著名景区。占地约5万余平方米，主建筑约1万平方米。二王庙分东、西两菀，东菀为园林区，西菀为殿宇区。全庙为木穿逗结构建筑，庙寺完全依靠自然地理环境，依山取势，在建筑风格上不强调中轴对称。\n
    </string>
    <string name="country_6">
        \t\t\t\t\n伏龙观\n
        \t\t\t\t伏龙观位于离堆公园内。其下临深潭，传说因李冰父子治水时曾在这里降伏孽龙在离堆之下，故于北宋初年改祭李冰，取名“伏龙观”。现存殿宇三重，前殿正中立有东汉时期（公元25～220年）所雕的李冰石像。殿内还有东汉堰工石像、唐代金仙和玉真公主在青城山修道时的遗物——飞龙鼎。伏龙观又名老王庙、李公词、李公庙等。清同治五年(公元1866年)四川巡抚祟实以为：“于虽齐圣，不先父食。况以公之贤：又有功于蜀，其施力程能固无待乎其子。今乃数典忘祖，于掩其父得无紊钦?”\n
    </string>
    <string name="country_7">
        \t\t\t\t\n安澜索桥\n
        \t\t\t\t安澜索桥又名“安澜桥”、“夫妻桥”。位于都江堰鱼嘴之上，横跨内外两江，被誉为“中国古代五大桥梁”，是都江堰最具特征的景观。始建于宋代以前，明末（公元17世纪）毁于战火。古名“珠浦桥”，宋淳化元年改“评事桥”，清嘉庆建新桥更名为“安澜桥”。原索桥以木排石墩承托，用粗竹缆横挂江面，上铺木板为桥面，两旁以竹索为栏，全长约500米，桥为钢索混凝土桩。\n
        \t\t\t\t索桥在四川西部地区起源较早。安澜索桥修建具体年代已不从所考，但据《华阳国志·蜀志》记载李冰“能笮”。《水经注·江水》载“涪江有笮桥”，证明至少安澜桥的修建，不会晚于修筑都江堰的年代。笮，意为竹索，这是川西古代索桥的主要建筑材料，故安澜索桥又被称为竹桥、绳桥、竹藤桥等。桥为1974年重建，下移100多米，将竹索改为钢索，承托缆索的木桩桥墩改为混凝土桩。\n
    </string>
    <string name="country_8">
        \t\t\t\t\n卧铁\n
        \t\t\t\t卧铁是埋在内江“凤栖窝”处的淘滩标准，也是内江每年维修清淘河床深浅的标志。相传李冰建堰时在内江河床下埋有石马，作为每年淘滩深度的标准，后来演变为卧铁。现有四根卧铁分别是明朝万历四年、清同治三年、民国十六年和1994年埋下的。游客在离堆古园内喷泉处能看到的这四根卧铁的复制品，其真品还埋在内江河床下。\n
    </string>
    <string name="country_9">
        \t\t\t\t\n其他景点\n
        \t\t\t\t奎光塔、虹口景区、南桥、园明宫、清溪园、都江堰城隍庙、玉垒关、离堆公园、秦堰楼、玉垒山公园、掷笔槽、青城外山景区、青城前山景区青城后山景区两河漂流药王庙、幸福大道、翠月湖、灵岩。\n
    </string>

    <string-array name="grid_title_array">
        <item>都江堰摇滚马拉松</item>
        <item>直击放水节现场！一场穿越2000多年的狂欢，亮点都在这儿了</item>
        <item>都江堰代表团参加2018年世界运河城市论坛~</item>
        <item>这场道系旅行让你一入青城忘凡尘，快来祈福养生、仙山小憩...</item>
        <item>重阳登高去哪儿？都江堰这4个登高好去处，秋意正浓，全家出游上翠微~</item>
        <item>直击放水节现场！一场穿越2000多年的狂欢，亮点都在这儿了</item>
        <item>都江堰代表团参加2018年世界运河城市论坛~</item>
    </string-array>
    <string-array name="grid_date_array">
        <item>活动时间：暂无</item>
        <item>活动时间：暂无</item>
        <item>活动时间：2018-10-13至2018-10-13</item>
        <item>活动时间：2018-10-12至2018-10-12</item>
        <item>活动时间：2018-10-15至2018-10-15</item>
        <item>活动时间：暂无</item>
        <item>活动时间：2018-10-13至2018-10-13</item>
    </string-array>
    <string-array name="grid_content_brief">
        <item>一场摇滚的盛宴,一次马拉松的狂欢。当“摇滚”撞上“马拉松”，会擦出怎样的火花？今早！全球瞩目的摇滚马拉松在都江堰激情开跑啦~ 一万多名长跑爱好者来都江堰一起跑！一起ROCK!水灵妹和跑者们一起见证了“摇滚”与“马拉松”的奇妙碰撞！是不是还在遗憾没有去成现场？没关系！跟着水灵妹，带你去领略现场的气氛！</item>
        <item>在都江堰有一场盛会，气势恢宏地重现了传承了两千多年的古老文化，完美细腻地呈现了川西平原富庶一方的生活风貌，向全球展现了千百年前蜀人创造的伟大和震撼。只因为都江堰人对水情有独钟，所以有了这独一无二的放水节。</item>
        <item>昨天，2018年世界运河城市论坛在江苏省扬州市召开，都江堰作为四川唯一一个会员城市，应邀参加了此次论坛。 2018年世界运河城市论坛是由世界运河历史文化城市合作组织、中国太平洋经济合作全国委员会共同主办的运河城市之间的专业性论坛。</item>
        <item>在幽幽青城托付心事， 来一段仙山小憩， 圣地寻踪， 这个周末的青城道系之旅足以让你魂牵梦萦~</item>
        <item>再过几天就是重阳节了， 古重阳佳节，皆是全家出游， 重阳这天所有亲人都要一起登高望远。 秋风轻抚，落叶婆娑作响， 挑个秋高气爽的日子， 带着家人登高去。</item>
        <item>在都江堰有一场盛会，气势恢宏地重现了传承了两千多年的古老文化，完美细腻地呈现了川西平原富庶一方的生活风貌，向全球展现了千百年前蜀人创造的伟大和震撼。只因为都江堰人对水情有独钟，所以有了这独一无二的放水节。</item>
        <item>昨天，2018年世界运河城市论坛在江苏省扬州市召开，都江堰作为四川唯一一个会员城市，应邀参加了此次论坛。 2018年世界运河城市论坛是由世界运河历史文化城市合作组织、中国太平洋经济合作全国委员会共同主办的运河城市之间的专业性论坛。</item>
    </string-array>


</resources>